🐛 FIX: layout issues on d/t media query

--- a/src/components/user/RenderNode.css
+++ b/src/components/user/RenderNode.css
@@ -47,12 +47,11 @@ svg {
 
 .controled-width {
 	max-width: 100%;
-	min-width: 50px;
+	min-width: 100px;
 	max-height: 100%;
-	min-height: 50px;
+	min-height: 150px;
+	flex-grow: 1;
 	overflow-wrap: break-word;
-	flex-basis: auto;
-	overflow: hidden;
 }
 
 .component-selected {
